--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@pylonide/v8debug",
   "description": "Implementation of the V8 debugger protocol",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "license": "LGPL-3.0",
   "homepage": "https://github.com/pylonide/lib-v8debug",
-  "author": "Fabian Jakobs <fabian@ajax.org>",
+  "author": "Sten Feldman <exile@chamber.ee>",
   "contributors": [
+    "Fabian Jakobs <fabian@ajax.org>",
     "Sten Feldman <exile@chamber.ee> (https://sten.pw/)"
   ],
   "main": "lib/v8debug",
   "engines": {
-    "node": ">= 12.22.1"
+    "node": ">= 18.18.2"
   },
   "dependencies": {
     "amd-loader": "~0.0.8"
